--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <groupId>com.glazunov</groupId>
     <artifactId>web-application</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <!--<packaging>war</packaging>-->
     <name>Test WebApl</name>
 
 
@@ -132,6 +132,7 @@
                         <password>tomcatuser</password>
                     </configuration>
                 </plugin>
+
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
@@ -144,6 +145,7 @@
                         </execution>
                     </executions>
                 </plugin>
+
             </plugins>
 
     </build>
